Updates to scripts