@@ -4,10 +4,18 @@ Daryl Posnett, Abram Hindle, and Premkumar Devanbu. 2011. A simpler model of sof
 
 This script calculates entropy for each method in a Java project.
 
-To run the script, first you need the merged output files from [commitAnalyzer](../commitAnalyzer) and [codeCloneDetection](../codeCloneDetection). But it can't be a very large file, as it will run out of memory. First, separate this file into multiple .csv, using ```separate.py```. 5000 entries per file is enough.
+To run the script, first you need the output from [the last merge script](../mergeStaticAnalysisCommitsClonesAndCoverage.py). But it can't be a very large file, as it might run out of memory. 
+
+You may try first, with the following command:
+
+```$java -jar .\target\testcaseparser-1.0-SNAPSHOT-jar-with-dependencies.jar C:\Users\dlucr\GitProjectsFSE2\ C:\Users\dlucr\GitProjects\testCaseAnalyzer\files\staticAnalysisCommitsClonesCoverage.csv C:\Users\dlucr\GitProjects\testCaseAnalyzer\files\entropy.csv -Xmx4g -XX:+UseConcMarkSweepGC -XX:-UseGCOverheadLimit```
+
+If you run into out of memory error, you can try the following:
+
+If needed, first separate this file into multiple .csv, using ```separate.py```. 5000 entries per file is enough.
 
 ```sh
-python separate.py commitsClonesCorrectNames.csv ./in/ 5000
+python separate.py staticAnalysisCommitsClonesCoverage.csv ./in/ 5000
 ```
 
 The, run the maven project, specifying the folder with the projects, the input .csv file and an output .csv file. For example:
@@ -17,5 +25,5 @@ The, run the maven project, specifying the folder with the projects, the input .
 After you run the script in all files, merge them all using ```append.py```.
 
 ```sh
-python append.py ./out/ entropyCommitsClones.csv
+python append.py ./out/ entropy.csv
 ```
